--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "build": "webpack --mode production"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
-    "babel-loader": "^8.2.2",
-    "webpack": "^5.24.3",
-    "webpack-cli": "^4.5.0"
+    "@babel/cli": "7.10.1",
+    "@babel/core": "7.10.2",
+    "@babel/preset-env": "7.10.2",
+    "babel-loader": "8.1.0",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11"
   }
 }
